--- a/home/home.css
+++ b/home/home.css
@@ -12,7 +12,6 @@ body {
 
 /* 웹페이지 전체 길이, 높이 100% 설정 */
 .wrapper {
-  width: 100%;
   height: 100%;
 }
 
@@ -20,13 +19,9 @@ body {
   background-color: #000000;
   color: white;
   font-family: "Roboto", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 /* 헤더,  네비 */
-header,
-nav {
+header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,7 +33,6 @@ nav {
 /* 헤드 태그 제외 나머지 */
 .container {
   display: flex;
-  width: 100%;
   height: 100%;
 }
 
@@ -52,6 +46,9 @@ aside {
   border: 1px solid white;
   transition: width 0.2s ease;
 }
+.right-content {
+  width: 100%;
+}
 
 /* 메인 태그 */
 main {
@@ -62,21 +59,19 @@ main {
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
   gap: 20px;
-  box-sizing: border-box;
   justify-content: flex-start;
 }
 /* 카드 영역 */
 .card {
-  flex: 0 0 calc(25% - 20px);
-  min-width: calc(25% - 20px);
+  flex: 1 1 calc(25% - 20px);
+  max-width: calc(25% - 20px);
+
   aspect-ratio: 4 / 3;
   text-align: center;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
-  min-width: 250px;
 }
 /* 카드 이미지 */
 .card img {
