--- a/home/home.css
+++ b/home/home.css
@@ -16,7 +16,6 @@ body {
 }
 
 body {
-  background-color: #000000;
   color: white;
   font-family: "Roboto", sans-serif;
 }
@@ -27,7 +26,7 @@ header {
   align-items: center;
   height: 56px;
   background-color: #212121;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 
 /* 헤드 태그 제외 나머지 */
@@ -41,9 +40,9 @@ aside {
   width: 240px;
   flex-shrink: 0; /* 화면 비율 상관없이 고정 */
   background-color: #212121;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   transition: width 0.2s ease;
 }
 .right-content {
@@ -54,20 +53,23 @@ aside {
 /* 메인 태그 */
 main {
   padding: 15px;
+  background-color: #000000;
+  height: 100%;
 }
 
 /* 전체 카드 영역 */
 .card-container {
+  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: flex-start;
+  overflow-y: auto;
 }
 /* 카드 영역 */
 .card {
   flex: 1 1 calc(25% - 20px);
   max-width: calc(25% - 20px);
-
   aspect-ratio: 4 / 3;
   text-align: center;
   border: 1px solid white;
