--- a/project/home/상단바/styles/header-sub.css
+++ b/project/home/상단바/styles/header-sub.css
@@ -1,5 +1,5 @@
 /* ===== 상단바 2 전체 영역 ===== */
-.header-sub {
+.header-sub {  
   position: fixed;
   width: 100%;
   height: 58px;
@@ -9,13 +9,13 @@
   box-sizing: border-box;
   z-index: 99;
   overflow: hidden;
-  padding-right: 48px;
-  position: relative;
+  padding-right: 48px;  
 }
 
 /* 탭을 담는 스크롤 영역 */
 .scroll-container {
   display: flex;
+  height: 30px;
   gap: 12px;
   overflow-x: auto;
   overflow-y: hidden;
@@ -51,11 +51,7 @@
   font-weight: bold;
 }
 /* 스크롤 화살표 버튼 */
-.scroll-arrow {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
+.scroll-arrow {  
   width: 40px;
   background: linear-gradient(to right, transparent, #212121);
   border: none;
