--- a/Channel/styles/channel-playlist.css
+++ b/Channel/styles/channel-playlist.css
@@ -1,5 +1,9 @@
 /* channel-playlists.css */
 
+.main-content {
+  border-top: 5px solid #212121;
+}
+
 .playlist-section {
   background-color: #000;
   padding: 0;
