--- a/videos/videos.css
+++ b/videos/videos.css
@@ -29,7 +29,7 @@ body {
 
 .video-player iframe {
   width: 100%;
-  height: auto;
+  height: 800px;
   border: none;
   border-radius: 10px;
 }
@@ -45,18 +45,30 @@ body {
   gap: 10px;
 }
 
-.video-stats {
-  display: flex;
-  color: #AAA;
-  margin: 8px 0 10px;
+.video-summary {
+  background-color: #202020;
+  padding: 16px;
+  border-radius: 8px;
+  margin-top: 12px;
+  color: #ccc;
   font-size: 14px;
-  justify-content: space-between;
-  border-bottom: 1px solid #303030;
+  line-height: 1.4;
+}
+
+.video-meta {
+  margin-bottom: 8px;
+  color: #aaa;
+}
+
+.video-description {
+  margin: 0;
+  white-space: pre-line;
 }
 
 .video-actions {
   display: flex;
   align-items: center;
+  margin-left: auto;
   gap: 12px;
   margin-bottom: 16px;
 }
@@ -91,6 +103,12 @@ body {
   border-radius: 50%;
 }
 
+.channel-details {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
 .channel-details h3 {
   font-size: 16px;
   margin: 0;
@@ -106,11 +124,11 @@ body {
 
 .subscribe-btn {
   margin-left: auto;
-  background-color: #cc0000;
+  background-color: white;
   border: none;
-  color: white;
-  padding: 10px 16px;
-  border-radius: 4px;
+  color: black;
+  padding: 8px 13px;
+  border-radius: 10px;
   font-weight: 700;
   cursor: pointer;
 }
@@ -149,6 +167,7 @@ body {
 
 .related-video {
   display: flex;
+  align-items: center;
   gap: 10px;
   background-color: #1a1a1a;
   border-radius: 8px;
