--- a/home/상단바/styles/header-sub.css
+++ b/home/상단바/styles/header-sub.css
@@ -1,5 +1,5 @@
 /* ===== 상단바 2 전체 영역 ===== */
-.header-sub {  
+.header-sub {
   position: fixed;
   width: 100%;
   height: 58px;
@@ -21,6 +21,7 @@
   overflow-y: hidden;
   gap: 12px;
   scrollbar-width: none;
+  align-items: center;
   -ms-overflow-style: none;
 }
 .scroll-container::-webkit-scrollbar,
@@ -69,8 +70,8 @@
   right: 88px;
 }
 .filter-button {
-  position: absolute;
-  right: 48px;
+  position: static;
+  /* right: 48px; */
   top: 0;
   width: 40px;
   height: 100%;
@@ -81,6 +82,7 @@
   justify-content: center;
   cursor: pointer;
   z-index: 100;
+  margin-left: auto;
 }
 .scroll-arrow img.more-icon, .filter-button img {
   width: 20px;
@@ -107,7 +109,9 @@
   margin: 5vh 5vw;
   z-index: 150;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease; 
+  /* margin: 0 auto; */
+  overflow-x: auto;
 }
 .filter-modal-popup.show {
   display: block;
@@ -131,11 +135,16 @@
   gap: 20px;
   margin-top: 8px;
   justify-content: space-between;
+  display: flex;  
+  min-width: 600px;
 }
 .filter-column {
-  flex: 1;
-  min-width: 0;
+  /* flex: 1; */
+  /* min-width: 0; */
   text-align: left;
+  flex: 1 1 0;
+  min-width: 120px;
+  
 }
 .filter-column h4 {
   font-size: 14px;
@@ -165,6 +174,11 @@
 .filter-column button:hover {
   text-decoration: underline;
   color: white;
+}
+
+.scroll-arrow.left,
+.scroll-arrow.right {
+  display: none;
 }
 
 /* ===== 반응형 ===== */
