--- a/Channel/styles/channel-smallvideo.css
+++ b/Channel/styles/channel-smallvideo.css
@@ -8,11 +8,11 @@ body {
 
 .featured-video {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  max-width: 1200px;
+  align-items: center;
+  /* justify-content: center; */
+  max-width: 1000px;
   margin: 40px auto;
-  padding: 24px 287px 24px 65px;
+  /* padding: 24px 287px 24px 65px; */
   gap: 32px;
   color: #ffffff;
   background-color: transparent;
@@ -21,6 +21,7 @@ body {
 
 .video-main-preview {
   position: relative;
+  min-width: 300px;
   height: auto;
   width: 100%;
   max-width: 640px;
@@ -29,8 +30,8 @@ body {
 }
 
 .video-thumb {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   object-fit: cover;
   border-radius: 12px;
   display: block;
@@ -39,8 +40,8 @@ body {
 /* ▶ 아이콘 버튼 */
 .custom-play-button {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 45%;
+  left: 45%;
   transform: translate(-50%, -50%);
   font-size: 64px;
   color: white;
@@ -55,15 +56,16 @@ body {
 }
 
 .video-description {
-  width: 400px;
+  /* width: 400px; */
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 10px;
 }
 
 .video-description h2 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 700;
   margin-bottom: 12px;
   color: #ffffff;
