--- a/Channel/styles/channel-title.css
+++ b/Channel/styles/channel-title.css
@@ -1,19 +1,15 @@
 /* channel-title.css */
-
-body {
-  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
-}
-
 .channel-header {
   background-color: #181818;
   color: white;
   padding-bottom: 10px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .banner-img {
   width: 100%;
-  height: 180px;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
@@ -72,7 +68,7 @@ body {
 
 .channel-nav ul {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   width: 100%;
   align-items: center;
   padding: 0 65px;
