--- a/Channel/styles/channel.css
+++ b/Channel/styles/channel.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body,html {
+    width: 100%;
+}
+
 body {
     background-color: #000000;
 }
@@ -25,4 +29,13 @@ main {
     padding: 0;
     width: 100%;
     margin-top: 56px;
+}
+
+@media (max-width: 625px) {
+    aside {
+        background-color: #212121;
+    }
+    .sidebar {
+        display: none;
+    }
 }
