--- a/videos/videos.css
+++ b/videos/videos.css
@@ -32,6 +32,7 @@ body {
   border: none;
   border-radius: 10px;
   aspect-ratio: 16 / 9;
+  max-width: 1500px;
 }
 
 .video-title {
@@ -158,7 +159,7 @@ body {
   background-color: #333;
 }
 
-.related-videos {
+.related-videos2 {
   flex: 0.75;
   display: flex;
   flex-direction: column;
@@ -222,6 +223,12 @@ body {
   border-bottom: 1px solid #333;
 }
 
+@media (min-width: 1316px) {
+  .related-videos1{
+    display: none;
+  }
+
+}
 @media (max-width: 1315px) {
   .main-layout {
     flex-direction: column;
@@ -239,6 +246,8 @@ body {
   .comment-section {
     order: 3;
   }
-
+  .related-videos2{
+    display: none;
+  }
   
 }
