--- a/Channel/styles/channel-smallvideo.css
+++ b/Channel/styles/channel-smallvideo.css
@@ -1,5 +1,4 @@
 /* channel-smallvideo.css */
-
 body {
   background-color: #000;
   margin: 0;
@@ -8,22 +7,38 @@ body {
 
 .featured-video {
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
   justify-content: center;
   max-width: 1200px;
   margin: 40px auto;
-  padding: 24px 287px 24px 65px;
+  padding: 24px;
   gap: 32px;
   color: #ffffff;
   background-color: transparent;
   position: relative;
+  flex-wrap: nowrap;
 }
 
-.video-preview {
+/* 뷰포트 작아지면 세로로 정렬 */
+@media (max-width: 768px) {
+  .featured-video {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .video-description {
+    text-align: center;
+    align-items: center;
+  }
+}
+
+.video-main-preview {
   position: relative;
-  width: 100%;
-  max-width: 640px;
-  aspect-ratio: 16 / 9;
+  height: 238px;
+  width: 424px;
+  min-width: 424px;
+  flex-shrink: 0;
   overflow: hidden;
 }
 
@@ -53,13 +68,14 @@ body {
   transform: translate(-50%, -50%) scale(1.1);
 }
 
-
 .video-description {
   width: 400px;
+  min-width: 280px;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .video-description h2 {
