비디오 html, css 수정

--- a/videos/videos.css
+++ b/videos/videos.css
@@ -239,6 +239,15 @@ body {
   .comment-section {
     order: 3;
   }
-
+  .related-videos2{
+    display: none;
+  }
   
+}
+
+@media (min-width: 1316px) {
+  .related-videos1{
+    display: none;
+  }
+
 }
