Sidebar 배경색상 통일 수정

--- a/home/sidebar/style/aside.css
+++ b/home/sidebar/style/aside.css
@@ -3,6 +3,10 @@
 }
 
 .sidebar {
+  background-color: #212121;
+  left: 0;
+  top: 56px;
+  width: 240px;
   position: fixed;
   height: 100%;
   font-size: 14px;
