2025-04-24 채널 페이지 css수정

--- a/Channel/styles/channel.css
+++ b/Channel/styles/channel.css
@@ -31,9 +31,16 @@ main {
     margin-top: 56px;
 }
 
+@media (max-width: 1285px) {
+ .sidebar{
+    position: static !important;
+ }
+
+}
+
 @media (max-width: 625px) {
     aside {
-        background-color: #212121;
+        display: none;
     }
     .sidebar {
         display: none;
