--- a/home/sidebar/style/aside.css
+++ b/home/sidebar/style/aside.css
@@ -3,6 +3,9 @@
 }
 
 .sidebar {
+  background-color: #212121;
+  left: 0;  
+  width: 190px;
   position: fixed;
   height: 100%;
   font-size: 14px;
