--- a/home/home.css
+++ b/home/home.css
@@ -39,7 +39,7 @@ header {
 /* 왼쪽 태그 */
 aside {
   width: 240px;
-  flex-shrink: 0; 화면 비율 상관없이 고정
+  flex-shrink: 0; /* 화면 비율 상관없이 고정 */
   background-color: #212121;
   /* padding: 10px; */
   text-align: center;
