변경전 커밋

--- a/home/home.css
+++ b/home/home.css
@@ -44,6 +44,7 @@ aside {
   /* padding: 10px; */
   text-align: center;
   /* border: 1px solid white; */  
+  position: fixed;
 }
 .right-content {
   flex: 1;
