--- a/home/home.css
+++ b/home/home.css
@@ -30,6 +30,7 @@ header {
   /* border: 1px solid white; */
 }
 
+
 /* 헤드 태그 제외 나머지 */
 .container {
   display: flex;
@@ -38,12 +39,13 @@ header {
 
 /* 왼쪽 태그 */
 aside {
-  width: 240px;
-  flex-shrink: 0; /* 화면 비율 상관없이 고정 */
+  /* width: 240px; */
+  flex-shrink: 0; /*화면 비율 상관없이 고정*/
   background-color: #212121;
   padding: 10px;
   text-align: center;
-  /* border: 1px solid white; */  
+  /* border: 1px solid white; */ 
+  position: fixed; 
 }
 .right-content {
   flex: 1;
