--- a/sidebar/style/aside.css
+++ b/sidebar/style/aside.css
@@ -3,7 +3,7 @@
 }
 
 .sidebar {
-  background-color: #212121;
+  background-color: #212121;  
   left: 0;  
   width: 190px;
   position: fixed;
@@ -14,6 +14,13 @@
   font-weight: 200;
   overflow-y: auto;
   scrollbar-width: none;
+  /* top: 56px; */
+}
+
+/* 확장했을시 */
+.sidebarExpanded{
+  width: 190px;
+  height: 100%;
 }
 
 .sidebar ul {
