--- a/sidebar/style/aside2.css
+++ b/sidebar/style/aside2.css
@@ -1,5 +1,4 @@
-.sidebar {
-    margin-top: 56px;
+.sidebar {    
     position: fixed;
     height: 100vh;
     overflow-y: auto;
@@ -16,6 +15,11 @@ ul {
     list-style-type: none;
     align-items: center;  
 }
+/* 사이드바 접었을시 */
+.sidebarClosed{
+    width: 70px;  
+    padding: 35px;  
+  }
 
 a {
     color: white;
