--- a/sidebar/style/aside2.css
+++ b/sidebar/style/aside2.css
@@ -4,9 +4,11 @@
     overflow-y: auto;
     scrollbar-width: none;
     background-color: #212121;
+    top: 56px;
 }
 
 ul {
+    
     width: 70px;
     color: white;
     display: flex;
@@ -15,11 +17,13 @@ ul {
     list-style-type: none;
     align-items: center;  
 }
+
 /* 사이드바 접었을시 */
-.sidebarClosed{
+.sidebarClosed {
     width: 70px;  
     padding: 35px;  
-  }
+    margin-top: 56px; /* 상단 여백 추가 */
+}
 
 a {
     color: white;
