--- a/Channel/styles/channel.css
+++ b/Channel/styles/channel.css
@@ -100,6 +100,7 @@ body {
   display: flex;
   align-items: center;
   padding: 20px 65px;
+  padding-left: 40vh;
   gap: 20px;
 }
 
@@ -107,7 +108,7 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-left: 180px;
+  margin-left: 10px;
 }
 
 .text-info {
@@ -180,7 +181,6 @@ body {
   display: block;
   margin: 0;
 }
-
 /* Featured Video Section 스몰비디오 옆 스크립트 */
 .featured-video {
   display: flex;
@@ -191,6 +191,9 @@ body {
   margin: 40px auto;
   padding: 24px;
   gap: 32px;
+  position: sticky;  /* Fix the position */
+  top: 20px; /* Make the element stick 20px from the top */
+  z-index: 10; /* Ensure it stays on top of other content */
 }
 
 .video-main-preview {
