전반적인 css 구조와 필요없는 파일 삭제 및 수정

--- a/css/common.css
+++ b/css/common.css
@@ -26,6 +26,7 @@ html, body {
 /* header 높이 설정 */
 header {
     height: 56px;
+    z-index: 1000;
 }
 /* main 기본 layout */
 main {
@@ -53,10 +54,12 @@ aside {
     background-color: var(--color-aside);
 }
 
+/* 목록 */
 ul {
     list-style: none;
 }
 
+/* 버튼*/
 button {
     color: var(--color-font);
 }
